--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,15 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Yigit
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: iOS Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://twitter.com/yigitalpciray/photo
+#https://avatars.githubusercontent.com/u/20143194?s=460&v=4
+#https://twitter.com/yigitalpciray/photo
 
 #
 # Flags below are optional
@@ -26,7 +28,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: www.twitter.com/yigitalpciray
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
