--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Yigit
 description: iOS Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://twitter.com/yigitalpciray/photo
-#https://avatars.githubusercontent.com/u/20143194?s=460&v=4
+avatar: https://avatars.githubusercontent.com/u/20143194?s=460&v=4
 #https://twitter.com/yigitalpciray/photo
 
 #
