--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yigit
+name: Yigit Alp Ciray
 
 # Short bio or description (displayed in the header)
 description: iOS Engineer
@@ -23,9 +23,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github:
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/yigitciray/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: https://twitter.com/yigitalpciray
