--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,8 @@ url: "https://ihadahamoment.com"
 # then add in the baseurl here, like this: "/repository-name"
 #baseurl: ""
 
+theme: minima
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
