--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yigit Alp Ciray
 description: iOS Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/Mhj0uktC_400x400.jpg
+avatar: ~/images/Mhj0uktC_400x400.jpg
 #https://avatars.githubusercontent.com/u/20143194?s=460&v=4
 #https://twitter.com/yigitalpciray/photo
 
