--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   linkedin: https://www.linkedin.com/in/yigitciray/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: https://twitter.com/yigitalpciray
+  twitter: yigitalpciray
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
