--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   flickr:
   github:
   instagram:
-  linkedin: https://www.linkedin.com/in/yigitciray/
+  linkedin: yigitciray
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: yigitalpciray
