--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yigit Alp Ciray
+name: I had aha! moment
 
 # Short bio or description (displayed in the header)
-description: iOS Engineer
+description: Yigit Alp Ciray
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Mhj0uktC_400x400.jpg
