--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: I had aha! moment
 
 # Short bio or description (displayed in the header)
-description: Yigit Alp Ciray - iOS Engineer
+description: Blog by Yigit Alp Ciray - iOS Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Mhj0uktC_400x400.jpg
