--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,10 @@ url: "https://ihadahamoment.com"
 
 theme: minima
 
+collections:
+  projects:
+    output: true
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
