--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: I had aha! moment
+name: I had \"aha!\" moment
 
 # Short bio or description (displayed in the header)
 description: Blog by Yigit Alp Ciray - iOS Engineer
