--- a/_config.yml
+++ b/_config.yml
@@ -51,15 +51,13 @@ url: "https://ihadahamoment.com"
 # then add in the baseurl here, like this: "/repository-name"
 #baseurl: ""
 
-remote_theme: pages-themes/primer@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: minima
 
 defaults:
   - scope:
       path: "blogs/_posts"
     values:
-      type: "blogs"
+      type: "blog"
   - scope:
       path: "books/_posts"
     values:
@@ -68,7 +66,7 @@ defaults:
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: I had "aha!" moment
+permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
