--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,9 @@ url: "https://ihadahamoment.com"
 # then add in the baseurl here, like this: "/repository-name"
 #baseurl: ""
 
-theme: minima
+remote_theme: pages-themes/primer@v0.2.0
+plugins:
+- jekyll-remote-theme 
 
 defaults:
   - scope:
