--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ url: "https://ihadahamoment.com"
 # then add in the baseurl here, like this: "/repository-name"
 #baseurl: ""
 
+theme: minima
 
 defaults:
   - scope:
@@ -65,7 +66,7 @@ defaults:
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: I had "aha!" moment
+permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
