--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,12 @@ url: "https://ihadahamoment.com"
 # then add in the baseurl here, like this: "/repository-name"
 #baseurl: ""
 
-theme: minima
+#theme: minima
+remote_theme: mmistakes/minimal-mistakes
+plugins:
+  - jekyll-feed
+  - jekyll-include-cache
+
 
 defaults:
   - scope:
